[project]
name = "psp-dsp"
version = "0.1.0"
description = "Library for digital signal processing for power system protection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"